WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105298
[GStreamer] webaudio/decode-audio-data-basic.html fails
https://bugs.webkit.org/show_bug.cgi?id=105298
Summary
[GStreamer] webaudio/decode-audio-data-basic.html fails
Dominik Röttsches (drott)
Reported
2012-12-18 07:52:06 PST
Making webaudio/decode-audio-data-basic.html fail with: PASS decodeAudioData raises exception correctly when arraybuffer parameter is null. PASS The resources/media/24bit-44khz.wav test: successCallback has been called correctly. -PASS The resources/media/invalid-audio-file.txt test: errorCallback has been called correctly. +FAIL The resources/media/invalid-audio-file.txt test: successCallback was not called. PASS successfullyParsed is true TEST COMPLETE
Attachments
Patch
(3.57 KB, patch)
2012-12-29 10:43 PST
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2012-12-29 10:43:50 PST
Created
attachment 180940
[details]
Patch
Philippe Normand
Comment 2
2012-12-30 08:59:17 PST
Committed
r138580
: <
http://trac.webkit.org/changeset/138580
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug