[GStreamer] webaudio/decode-audio-data-basic.html fails https://bugs.webkit.org/show_bug.cgi?id=105298

Reviewed by Martin Robinson.

Source/WebCore:

* platform/audio/gstreamer/AudioFileReaderGStreamer.cpp:
(WebCore::AudioFileReader::createBus): Return a null pointer if an
error happened while processing a media file.

LayoutTests:

* platform/efl/TestExpectations: Unflag fixed test.

Canonical link: https://commits.webkit.org/124064@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138580 268f45cc-cd09-0410-ab3c-d52691b4dbfc